# CW_3

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
src/: utils.py
tests/: test_utils.py
utils/: settings.py
