[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["Daniel <danieelpark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
